--- a/Form_Producto.html
+++ b/Form_Producto.html
@@ -10,7 +10,7 @@
 
 <form action="./Script_PHP/guardar.php" method="POST" name="FormProducto">
 
-  <fieldset id="Datos_Basicos">
+  <fieldset id="Datos">
     <legend>Datos Básicos</legend>
     
 	Nombre del Producto
@@ -45,8 +45,8 @@
 				<td>
           <select name="cmbImpuesto" id="Económico2">
   					<option value="4">4%</option>
-  					<option value="7">8%</option>
-  					<option value="16">12%</option>
+  					<option value="8">8%</option>
+  					<option value="12">12%</option>
 				  </select></td>
 		  </tr>
 		</table>		
@@ -61,7 +61,7 @@
   <input type="submit" name="btnGuardar" value="Guardar Cambios">
   <input type="reset" name="btnReset" value="Borrar los datos introducidos">
   <br><br><br>
-  <a href="index.html">Regresar</a>
+  <a href="index.html">Regresa</a>
 
 
   </form>
